<resources>
    <string name="app_name">GrowApp</string>
    <string name="add_room">Add Room</string>
    <string name="room_name">Room Name</string>
    <string name="plant_name">Plant Name</string>
    <string name="add_plant">Add plant</string>
    <string name="header_rooms">Rooms</string>
    <string name="header_plants">Plants</string>
    <string name="create_new_room">Create New Room</string>
    <string name="room_name_hint">Room Name (e.g. Living Room)</string>
    <string name="save_room">Save Room</string>
    <string name="create_new_plant">New Plant</string>
    <string name="plant_name_hint">plant name (e.g. Daniela)</string>
    <string name="save_plant">save plant</string>
    <string name="len_cm">Leng (cm)</string>
    <string name="wid_cm">Wid (cm)</string>
    <string name="hei_cm">Hei (cm)</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="indoor">Indoor</string>
    <string name="assign_to_room_optional">Assign to Room (Optional)</string>
    <string name="strain_species_optional">Strain/Species (Optional)</string>
</resources>